# XorString

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Include/: XorString.hpp
Test/: CMakeLists.txt
Test/Source/: Main.cpp
